# rebe

./: Cargo.toml  README.md
.github/workflows/: CICD.yml
examples/: profile.ini
scripts/: README.md  define-dictionaryapi.py  define-tsv.py
src/: analysis.rs  cli.rs  dict.rs  document.rs  error.rs  export.rs  lib.rs  main.rs  profile.rs  text.rs
tests/fixtures/: README.md  frankenstein-1818-excerpt.txt  portable-test.mdx.base64
