[package]
name = "rebe"
version = "0.1.1"
edition = "2021"
authors = ["Jason Wang <wang_borong@163.com>"]
description = "Prepare English reading with focused vocabulary reports from books and article corpora"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/wang-borong/rebe"
homepage = "https://github.com/wang-borong/rebe"
keywords = ["english", "reading", "vocabulary", "epub", "dictionary"]
categories = ["command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boko = { version = "0.3.0", default-features = false }
docx-lite = "0.2.0"
epub-parser = "0.3.4"
html2text = "0.17.1"
mdict-rs = { version = "0.1.4", features = ["lzo"] }
pdf-extract = "0.12.0"
quick-xml = "0.36.2"
serde_json = "1.0.150"
sha2 = "0.10.9"
ureq = "3.3.0"
wordnet-lemmatizer = "0.1.0"

[dev-dependencies]
base64 = "0.22.1"
